se cambio titulo en home_admin

--- a/src/main/resources/templates/admin/home_admin.html
+++ b/src/main/resources/templates/admin/home_admin.html
@@ -10,7 +10,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <div class="container">
             
             <header class="jumbotron my-4">
-                <h1 class="display-3">Bienvenido al Panel de administrador</h1>
+                <h1 class="display-3">Bienvenido</h1>
             </header>
             
              <table class="table">
